Add update employee status and update client status
