# src/controllers/employee/employee.routes.ts
@@ -6,6 +6,7 @@ export const EmployeeRouter = Router();
 
 EmployeeRouter.put('/register-employee-profile', Controller.registerEmployeeProfile);
 EmployeeRouter.put('/update-employee-profile', Authorization, Controller.updateEmployeeProfile);
+EmployeeRouter.put('/update-employee-status/:_id', Authorization, Controller.updateEmployeeStatus);
 EmployeeRouter.get('/get-employee-profile', Authorization, Controller.getEmployeeProfile);
 EmployeeRouter.get('/get-employee-profile/:_id', Authorization, Controller.getEmployeeProfile);
 EmployeeRouter.get('/get-employee-list', Authorization, CheckRole, Controller.getEmployeeList);
